app-test/app-test1/app-test-nm.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app-test-nm # Назначаем имя пространства имён
